--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vercel/analytics": "^1.4.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.465.0",
