--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.465.0",
